# Whoah-Math

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FindGMP.cmake  LICENSE.md  README.md  SECURITY.md
.github/workflows/: cmake-multi-platfo2rm.yml  cmake-multi-platform.yml  main.yml
Whoah/: main.cpp  main.h  math_functions.cpp  math_functions.h  math_tests.cpp  math_utils.cpp  utility_functions.cpp  utility_functions.h
Whoah.xcodeproj/: project.pbxproj
Whoah.xcodeproj/xcshareddata/xcschemes/: Whoah.xcscheme
Whoah.xcodeproj/xcuserdata/t.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Whoah.xcodeproj/xcuserdata/t.xcuserdatad/xcschemes/: xcschememanagement.plist
Whoah/Headers/: main.h  main.hpp  math_functions.h  math_functions.hpp  math_tests.hpp  math_utils.hpp  utility_functions.h  utility_functions.hpp
cmake/Modules/: FindGMP.cmake
gmp/include/: gmp.h
gmp/lib/: libgmp-10.lib
